<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="currencyVariables"
            type="com.ahmedelgendy.banquemisrtask.convert.presentation.ConvertViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/convertLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="13dp"

                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="10"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/fromDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@android:drawable/btn_dropdown"
                    android:gravity="center_vertical"
                    android:popupBackground="@color/white"
                    android:text="@={currencyVariables.formCurrencyTitle}"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/fromTextField"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"

                    android:background="#E8E9EB"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@={currencyVariables.fromAmount}"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/swapBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_swap" />

                <TextView
                    android:id="@+id/toDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@android:drawable/btn_dropdown"
                    android:gravity="center_vertical"
                    android:popupBackground="@color/white"
                    android:text="@={currencyVariables.toCurrencyTitle}"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/toTextField"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="#E8E9EB"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@={currencyVariables.toAmount}"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:weightSum="5"
                app:layout_constraintTop_toBottomOf="@id/convertLayout">


                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>


            <Button
                android:id="@+id/detailsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/black"
                android:text="@string/details"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>